sfdx/force-app/main/default/objects/Twilio_Session__c/Twilio_Session__c.object-meta.xml
<CustomObject>
    <label>Twilio Session</label>
    <nameField>
        <displayFormat>TS-{0000}</displayFormat>
        <label>Twilio Session Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Twilio Sessions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>