sfdx/force-app/main/default/objects/Twilio_Session__c/fields/Twilio_Call_SID__c.field-meta.xml
<CustomField>
    <fullName>Twilio_Call_SID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Twilio Call SID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>