sfdx/force-app/main/default/objects/Twilio_Session__c/fields/Twilio_Task_SID__c.field-meta.xml
<CustomField>
    <fullName>Twilio_Task_SID__c</fullName>
    <label>Twilio Task SID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>